Added brands, categories and profile edit

--- a/brands.html
+++ b/brands.html
@@ -19,7 +19,7 @@
 		<header class="container-fluid">
 			<div class="row">
 				<div class="col">
-					<a href="#" target="_self">
+					<a href="index.html" target="_self">
 						<img src="assets/img/logoshop.png" class="img-fluid" />
 					</a>
 				</div>
@@ -30,7 +30,6 @@
 				<a class="fa fa-sort-down arrow"></a>
 				<div class="dropdown-content">
 					<a href="./categories.html">Categorii</a>
-					<a href="./brands.html">Brands</a>
 					<a href="./contact.html">Contact</a>
 				</div>
 			</div>
@@ -40,7 +39,6 @@
 				</button>
 				<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
 					<a class="dropdown-item" href="./categories.html">Categories</a>
-					<a class="dropdown-item" href="./brands.html">Brands</a>
 					<a class="dropdown-item" href="./contact.html">Contact</a>
 				</div>
 			</div>
@@ -72,12 +70,7 @@
 		</nav>
 		<main>
 			<div class="container items-container">
-				<div class="row">
-					<div class="col-12">
-						<h1>Aici carusel</h1>
-					</div>
-				</div>
-				<div id="content-row" class="row"></div>
+				<div id="brands-container" class="row"></div>
 			</div>
 		</main>
 		<footer class="py-1">
