--- a/product.html
+++ b/product.html
@@ -29,8 +29,9 @@
 			<div class="navbar-toggler dropdown only-small">
 				<a class="fa fa-sort-down arrow"></a>
 				<div class="dropdown-content">
-					<a href="#">Categorii</a>
-					<a href="#">Contact</a>
+					<a href="./categories.html">Categorii</a>
+					<a href="./brands.html">Brands</a>
+					<a href="./contact.html">Contact</a>
 				</div>
 			</div>
 			<div class="dropdown only-big">
@@ -38,8 +39,9 @@
 					Meniu
 				</button>
 				<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-					<a class="dropdown-item" href="#">Categories</a>
-					<a class="dropdown-item" href="#">Contact</a>
+					<a class="dropdown-item" href="./categories.html">Categories</a>
+					<a class="dropdown-item" href="./brands.html">Brands</a>
+					<a class="dropdown-item" href="./contact.html">Contact</a>
 				</div>
 			</div>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#toggler" aria-expanded="false" aria-label="Navigation">
