--- a/category.html
+++ b/category.html
@@ -19,7 +19,7 @@
 		<header class="container-fluid">
 			<div class="row">
 				<div class="col">
-					<a href="#" target="_self">
+					<a href="index.html" target="_self">
 						<img src="assets/img/logoshop.png" class="img-fluid" />
 					</a>
 				</div>
@@ -72,11 +72,6 @@
 		</nav>
 		<main>
 			<div class="container items-container">
-				<div class="row">
-					<div class="col-12">
-						<h1>Aici carusel</h1>
-					</div>
-				</div>
 				<div id="content-row" class="row"></div>
 			</div>
 		</main>
