--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<link rel="stylesheet" href="assets/css/bootstrap.min.css">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 		<link rel="stylesheet" href="assets/css/design.css">
+		<link href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.css" rel="stylesheet"/>
 
 		<!--OG Tags -->
 		<meta property="og:type" content="website" />
@@ -47,7 +48,7 @@
 				</div>
 			</div>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#toggler" aria-expanded="false" aria-label="Navigation">
-				<span class="fa fa-search"></span>	
+				<span class="fa fa-search"></span>
 			</button>
 			<button class="navbar-toggler" type="button">
 				<a class="fa fa-shopping-cart" onclick="openCartModal()" data-toggle="modal" data-target="#detailsModal"></a>
@@ -60,8 +61,8 @@
 			</div>
 			<div class="collapse navbar-collapse" id="toggler">
 				<div class="form-inline mt-0 mt-lg-0 my-2 my-lg-0 ml-auto mr-auto">
-					<input class="form-control mr-sm-2" type="search" placeholder="Produs...">
-					<a href="./search.html"><button class="btn my-sm-0 btn-secondary">Caută</button></a>
+					<input id="productName" class="form-control mr-sm-2" type="search" placeholder="Categorie...">
+					<button class="btn my-sm-0 btn-secondary" onclick="searchURL();">Caută</button>
 				</div>
 			</div>
 			<a id="cart" class="btn fa fa-2x fa-shopping-cart only-big menu-buttons" onclick="openCartModal()" data-toggle="modal" data-target="#detailsModal"></a>
@@ -120,7 +121,7 @@
 		<script src="assets/js/jquery-3.3.1.min.js"></script>
 		<script src="assets/js/bootstrap.min.js"></script>
 		<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/qs/6.5.2/qs.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
 		<script src="assets/js/login.js"></script>
 		<script src="assets/js/productsManagement.js"></script>
 	</body>
